--- a/main.ipynb
+++ b/main.ipynb
@@ -2,20 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f6d723bd-322a-47a9-87cb-784d16e48f66",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
+    "import hvplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a6b06aa5-1c8c-49bc-b6ed-39553c22fea6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b06aa5-1c8c-49bc-b6ed-39553c22fea6",
+   "id": "358297be-26b6-42d1-8dee-a9325e6f35b3",
    "metadata": {},
    "outputs": [],
    "source": []
